--- a/TM.Support.Web/Views/Home/Analytics.cshtml
+++ b/TM.Support.Web/Views/Home/Analytics.cshtml
@@ -1,5 +1,8 @@
-﻿@{
+﻿@model IList<PJ_CWN019.TM.Support.Web.Models.ProfileLogStaticPerDay>
+
+@{
     ViewBag.Title = "Analytics";
 }
 
 <h2>Analytics</h2>
+
