--- a/TM.Web/Views/Organization/Structure.cshtml
+++ b/TM.Web/Views/Organization/Structure.cshtml
@@ -96,7 +96,7 @@
             var divisionsGridpanel = Ext.create("widget.grid", {
                 xtype: 'grid',
                 layout: { type: 'border', padding: 1 },
-                title: '<i class="glyphicon glyphicon-th-large"></i>&nbsp;Divisions',
+                title: '<i class="glyphicon glyphicon-th-large"></i>&nbsp;ฝ่าย / Divisions',
                 store: divisionStore,
                 features: [filters],
                 columns: {
@@ -197,7 +197,7 @@
 
             var departmentsGridpanel = Ext.create("widget.grid", {
                 layout: { type: 'border', padding: 1 },
-                title: '<i class="glyphicon glyphicon-th"></i>&nbsp;Departments',
+                title: '<i class="glyphicon glyphicon-th"></i>&nbsp;แผนก / Departments',
                 store: departmentStore,
                 features: [filters],
                 columns: {
@@ -307,7 +307,7 @@
             var positionsGridpanel = Ext.create("widget.grid",
                 {
                     layout: { type: 'border', padding: 1 },
-                    title: '<i class="glyphicon glyphicon-thumbs-up"></i>&nbsp;Positions',
+                    title: '<i class="glyphicon glyphicon-thumbs-up"></i>&nbsp;ตำแหน่ง / Positions',
                     store: positionStore,
                     columns: {
                         items: [
@@ -448,7 +448,7 @@
                     {
                         xtype: 'panel',
                         layout: 'border',
-                        title: '<i class="glyphicon glyphicon-user"></i>&nbsp;Employees',
+                        title: '<i class="glyphicon glyphicon-user"></i>&nbsp;พนักงาน / Employees',
                         items: [{
                             xtype: 'panel',
                             id: 'searchEmpForm',
