--- a/TM.Web/Views/Project/SearchReadOnly.cshtml
+++ b/TM.Web/Views/Project/SearchReadOnly.cshtml
@@ -10,6 +10,7 @@
     })
 
 @section scripts{
+    @Scripts.Render("~/bundles/d3")
     <script>
         paramsView.urlReadProject = '@Url.Content("~/Project/FindProjectForOwner")';
         paramsView.urlReadDepartment = '@Url.Content("~/Project/GetDepartment")';
@@ -17,7 +18,7 @@
         paramsView.urlReadEmployee = '@Url.Content("~/Project/FindEmployee")';
         paramsView.urlReadProjectMember = '@Url.Content("~/Project/FindProjectMember")';
         paramsView.urlReadProjectRole = '@Url.Content("~/Project/GetProjectRole")';
-        paramsView.urlSaveProjectRole = '@Url.Content("~/Project/SaveProjectRole")';
+        paramsView.urlSaveMemberProjectRole = '@Url.Content("~/Project/SaveMemberProjectRole")';
         paramsView.urlAssignProjectMember = '@Url.Content("~/Project/AssignProjectMember")';
         paramsView.urlRemoveProjectMember = '@Url.Content("~/Project/RemoveProjectMember")';
         paramsView.userDivisionID = '@ViewBag.UserDivisionID';
@@ -25,6 +26,15 @@
         paramsView.urlGetCumulativeEffortByWeek = '@Url.Content("~/Project/GetCumulativeEffortByWeek")';
         paramsView.urlGetProjectStatus = '@Url.Content("~/Project/GetProjectStatus")';
         paramsView.urlSaveProject = '@Url.Content("~/Project/SaveProject")';
+
+        paramsView.urlGetCumulativeEffortByDate = '@Url.Content("~/ProjectPortfolio/GetCumulativeCostByDate")';
+
+        paramsView.urlGetEffortTimesheetItem = '@Url.Content("~/ProjectPortfolio/GetEffortTimesheetItem")';
+
+        paramsView.urlGetCustomer = '@Url.Content("~/Project/GetAllCustomer")';
+        paramsView.urlGetProjectDeliveryPhases = '@Url.Content("~/Project/GetProjectDeliveryPhases")';
+        paramsView.urlSaveProjectDeliveryPhase = '@Url.Content("~/Project/SaveProjectDeliveryPhase")';
+        paramsView.urlDeleteProjectDeliveryPhase = '@Url.Content("~/Project/DeleteProjectDeliveryPhase")';
 
         @if(@Roles.IsUserInRole(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.Manager)){
         <text>
