--- a/TM.Web/Views/Shared/_Layout.cshtml
+++ b/TM.Web/Views/Shared/_Layout.cshtml
@@ -113,27 +113,29 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="@Url.Content("~/Home/Index")"><i class="glyphicon glyphicon-home"></i>&nbsp;Home</a></li>
-                            @if (rolesDisplayeList.Contains(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.Admin))
+                            @if (rolesDisplayeList.Contains(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.Admin)
+                                || rolesDisplayeList.Contains(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.Executive))
                             {
-                                @*<li class="dropdown">
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-tower"></i>&nbsp;Organization<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" aria-labelledby="timesheet">
-                                        <li><a href="@Url.Content("~/Organization/Employees")"><i class="glyphicon glyphicon-user"></i>&nbsp;Employees</a></li>
-                                        <li><a href="@Url.Content("~/Organization/ProjectPortfolio")"><i class="glyphicon glyphicon-gift"></i>&nbsp;Project Portfolio</a></li>
-                                    </ul>
-                                </li>*@
-
                                 <li class="dropdown">
                                     <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-usd"></i>&nbsp;Project Portfolio<span class="caret"></span></a>
                                     <ul class="dropdown-menu" aria-labelledby="timesheet">
-                                        <li><a href="@Url.Content("~/Organization/ProjectPortfolio")"><i class="glyphicon glyphicon-gift"></i>&nbsp;Dashboard</a></li>
+                                        <li><a href="@Url.Content("~/ProjectPortfolio/ProjectDashboard")"><i class="glyphicon glyphicon-gift"></i>&nbsp;Dashboard</a></li>
+                                        <li><a href="@Url.Content("~/ProjectPortfolio/StrategyConfiguration")"><i class="glyphicon glyphicon-king"></i>&nbsp;Strategy Configuration</a></li>
                                     </ul>
                                 </li>
-                                
+                            }
+                            
+
+                            @if (rolesDisplayeList.Contains(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.HR))
+                            {
                                 <li><a href="@Url.Content("~/Organization/Structure")"><i class="glyphicon glyphicon-tower"></i>&nbsp;Organization</a></li>
+                            }
+                            
+                            @if (rolesDisplayeList.Contains(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.Admin))
+                            {
                                 <li><a href="@Url.Content("~/CustomerRelationship/Management")"><i class="glyphicon glyphicon-link"></i>&nbsp;Customer Relationship</a></li>
                             }
-                    
+                            
                         @if (Roles.IsUserInRole(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.Manager) 
                             || Roles.IsUserInRole(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.Admin))
                         {
@@ -142,7 +144,9 @@
                                     <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="@PJ_CWN019.TM.Web.Models.ConstPage.ProjectManagementIcon"></i>&nbsp;@PJ_CWN019.TM.Web.Models.ConstPage.ProjectManagementTitle<span class="caret"></span></a>
                                     <ul class="dropdown-menu" aria-labelledby="timesheet">
                                         <li><a href="@Url.Content("~/Project/Search")"><i class="@PJ_CWN019.TM.Web.Models.ConstPage.ProjectIcon"></i>&nbsp;@PJ_CWN019.TM.Web.Models.ConstPage.ProjectTitle</a></li>
-                                        <li><a href="@Url.Content("~/Project/Activities")"><i class="@PJ_CWN019.TM.Web.Models.ConstPage.ProjectActivitiesIcon"></i>&nbsp;@PJ_CWN019.TM.Web.Models.ConstPage.ProjectActivitiesTitle</a></li>
+                                        @if (Roles.IsUserInRole(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.Admin)) { 
+                                            <li><a href="@Url.Content("~/Project/Activities")"><i class="@PJ_CWN019.TM.Web.Models.ConstPage.ProjectActivitiesIcon"></i>&nbsp;@PJ_CWN019.TM.Web.Models.ConstPage.ProjectActivitiesTitle</a></li>
+                                        }
     @*<li><a href="@Url.Content("~/Project/ProjectProgress")"><i class="@PJ_CWN019.TM.Web.Models.ConstPage.ProjectProgressIcon"></i>&nbsp;@PJ_CWN019.TM.Web.Models.ConstPage.ProjectProgressTitle</a></li>*@
                                     </ul>
                                 </li>
@@ -168,7 +172,8 @@
                         }
                         
                         @if (rolesDisplayeList.Contains(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.Executive)
-                            || rolesDisplayeList.Contains(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.Admin))
+                            || rolesDisplayeList.Contains(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.Admin)
+                            || rolesDisplayeList.Contains(PJ_CWN019.TM.Web.Models.Providers.ConstAppRoles.HR))
                         {
                             <li><a href="@Url.Content("~/ProjectPortfolio/Report")"><i class="glyphicon glyphicon-file"></i>&nbsp;Report</a></li>
                         }
